--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.softdesign.devintensive">
 
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+
+    <uses-feature
+        android:name="android.hardware.camera2"
+        android:required="false"></uses-feature>
+    <uses-feature
+        android:name="android.hardware.camera2.autofocus"
+        android:required="false"></uses-feature>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+
     <application
         android:name=".utils.DevintensiveApplication"
         android:allowBackup="true"
@@ -9,12 +20,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.MainActivity">
+        <activity android:name=".ui.activities.DevintensiveAutorize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.activities.MainActivity">
         </activity>
     </application>
 
